--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,26 @@
                 android:layout_height="wrap_content"
                 android:text="Switch" />
         </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="游戏和女朋友哪个重要？"
+            android:textSize="18dp"
+            android:textColor="#000000"/>
+        <CheckBox
+            android:id="@+id/checkBox_game"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="游戏"
+            android:textSize="18dp"
+            android:textColor="#000000"/>
+        <CheckBox
+            android:id="@+id/checkBox_girl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="女朋友"
+            android:textSize="18dp"
+            android:textColor="#000000"/>
         <Button
             android:id="@+id/button1"
             android:layout_width="wrap_content"
@@ -87,6 +107,9 @@
             android:textSize="20dp"
             tools:layout_editor_absoluteX="7dp"
             tools:layout_editor_absoluteY="62dp" />
+
+
+
     </LinearLayout>
 
 
